--- a/src/OpenGLCube/OpenGLCube/OpenGLCube.vcxproj.filters
+++ b/src/OpenGLCube/OpenGLCube/OpenGLCube.vcxproj.filters
@@ -27,12 +27,36 @@
     <ClCompile Include="OpenGLMaestro.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Drawer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Rotator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CubeBuilder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Coordinate.cpp">
+      <Filter>Source Files\Helpers</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CMY.h">
       <Filter>Source Files\Helpers</Filter>
     </ClInclude>
     <ClInclude Include="OpenGLMaestro.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Drawer.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CubeBuilder.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Coordinate.h">
+      <Filter>Source Files\Helpers</Filter>
+    </ClInclude>
+    <ClInclude Include="Rotator.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
