--- a/OpenGLCube/OpenGLCube.vcxproj
+++ b/OpenGLCube/OpenGLCube.vcxproj
@@ -74,7 +74,7 @@
     <ClCompile Include="Coordinate.cpp" />
     <ClCompile Include="CubeBuilder.cpp" />
     <ClCompile Include="Drawer.cpp" />
-    <ClCompile Include="HelloWorld.cpp" />
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="OpenGLMaestro.cpp" />
     <ClCompile Include="Rotator.cpp" />
   </ItemGroup>
